fix(button-toolbar): add option to wrap instead of wrapping by default

--- a/src/components/ButtonToolbar/ButtonToolbar.scss
+++ b/src/components/ButtonToolbar/ButtonToolbar.scss
@@ -7,7 +7,10 @@ Group multiple buttons together
 .c-button-toolbar {
 	align-items: center;
 	display: flex;
-	flex-wrap: wrap;
+
+	&.c-button-toolbar__wrap {
+		flex-wrap: wrap;
+	}
 
 	> * + * {
 		margin-left: 0.8rem;
